--- a/ArtisanMonstersManual.html
+++ b/ArtisanMonstersManual.html
@@ -30,14 +30,15 @@
     <h3>Artisan Monsters: Alpha</h3>
     <a href="/ArtisanMonstersAlpha.html">Return to Game</a>
     <h4>User Manual</h4>
-    <h5 style="font-size: 150%;">Combat</h5>
     <p>
         This is a work in progress, these sections are to help illucidate systems and concepts that don't have proper in game explination.<br>
         Many of these systems are likely to change drasticly as development continues.<br>
-        <br>
+    </p>
+    <h5 style="font-size: 150%;">Combat</h5>
+    <p>
         <b>Fight</b>, will allow your monster to decide what to do on the fly.<br>
         This is generally preferable, as they can react to what other monsters do. Healing if they are suddenly hit with a heavy attack, for example.<br>
-        George Markus II has a low speed stat, and is more likly to cast Meditate to Heal as his health get's low.<br>
+        George Markus II has a low speed stat, so other monster will typically go first and sometimes get extra turns before your command is executed.<br>
         <br>
         <b>Commands</b>, will open the Commands Menu allowing you to give your monster orders. The current commands are "Attack", "Defend", and "Spells". each are detailed below.<br>
         Note: for now your monster is perfectly loyal, I plan to eventually make this not the case.<br>
