--- a/ArtisanMonstersManual.html
+++ b/ArtisanMonstersManual.html
@@ -43,8 +43,10 @@
         <b>Commands</b>, will open the Commands Menu allowing you to give your monster orders. The current commands are "Attack", "Defend", and "Spells". each are detailed below.<br>
         Note: for now your monster is perfectly loyal, I plan to eventually make this not the case.<br>
         <b>Flee</b>, will allow you <i>and your monster</i> to try to run from a battle you believe to be a lost cause.<br>
-        Escape Change is calculate below:<br>
+        Escape Chance is calculate below:<br>
+        
         <h6 style="font-size: 100%;">Escape Chance = (AllyMonster.Speed)/(EnemyMonster.Speed * 2) + (0.1 * Failed Attempts this Battle)</h6>
+        
         this means that against a faster monster, you'll need to identify a losing battle sooner to have a chance at escaping.<br>
         <br>
         <b>Attack</b>, will order your monster to try to attack their opponent physically.<br>
