--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -27,22 +27,29 @@
     <br>
     <h3>Artisan Monsters: Alpha</h3>
     <h4>Monster Battler Game</h4>
-    <table id="PrimaryTable" style="width: auto; margin-left: auto; margin-right: auto;">
-        <tr>
+    <table id="PrimaryTable" style="width: 0px; aspect-ratio: 1/1; margin-left: auto; margin-right: auto;">
+        <tr style="height: 100%;">
             <td>
                 <p id="MapCanvas" style="white-space: pre; width: auto;">
                     MapCanvis.
                 </p>
             </td>
-            <td>
+            <!-- <td>
                 <p id="MonCanvas" style="white-space: pre; text-align: left; width: auto;">
                     MonCavis.
                 </p>
+            </td> -->
+        </tr>
+        <tr style="height: auto;">
+            <td colspan="2">
+                <p id="DialogCanvas" style="white-space: pre; width: 500px; margin-bottom: 1px; margin-top: 1px;">
+                    Dialog.
+                </p>
             </td>
         </tr>
-        <tr>
+        <tr style="height: 0;">
             <td colspan="2" style="width: 100%;">
-                <table id="InputsTable" style="width: 100%;">
+                <table id="InputsTable" style="width: 100%; margin-bottom: 1px; margin-top: 1px;">
                     <tr>
                         <td style="width: 100px;"></td>
                         <td style="width: 100px;">
@@ -103,14 +110,16 @@
         Click A to Pause/Select, Click B to Cancel.<br>
         <a href="/ArtisanMonstersManual.html">AMA Manual</a><br>
         To-Do:<br>
-        1. Develop Magic Contamination System. <br>
-        2. Let the Player select starting Monster.<br>
-        3. Develop a backend Map Builder, make the map more interesting.<br>
-        4. Develop system to travel between maps<br>
-        5. Expand cast of Monsters.<br>
-        6. Develop a Town Map with friendly NPCs.<br>
-        7. Expand Team Size to 2 Monsters.<br>
+        1. Fix Spell Descriptions so that they don't overflow the virtual game screen<br>
+        2. Add NPCs that you can talk to, and design Town Map to replace "PlaceHolder" Map.<br>
+        3. Add optional tutorial<br>
+        4. Let the Player select starting Monster.<br>
+        5. Develop a Better Dungeon Generation System, and design pre-generated maps.<br>
+        6. Design systems to befriend/capture/breed monsters.<br>
+        7. Expand cast of Monsters.<br>
+        8. Expand Team Size to 2 Monsters.<br>
     </p>
+    <script src="amaDialog.js"></script>
     <script src="amaSpells.js"></script>
     <script src="amaMonTactics.js"></script>
     <script src="WildMonsters.js"></script>
