--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -12,6 +12,7 @@
         }
         td {
             text-align: center;
+           word-wrap: break-word;
             border: 1px solid black;
         }
     </style>
