--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -125,7 +125,6 @@
         5. Develop a Better Dungeon Generation System, and design pre-generated maps.<br>
         6. Design systems to befriend/capture/breed monsters.<br>
         7. Expand cast of Monsters.<br>
-        8. Expand Team Size to 2 Monsters.<br>
     </p>
     <script src="amaDialog.js"></script>
     <script src="amaSpells.js"></script>
@@ -133,6 +132,7 @@
     <script src="WildMonsters.js"></script>
     <script src="amaMap.js"></script>
     <script src="amaAllyMonsters.js"></script>
+    <script src="amaPlayer.js"></script>
     <script src="amaEnemyMonsters.js"></script>
     <script src="amaBattle.js"></script>
     <script src="amaPause.js"></script>
