--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -136,6 +136,7 @@
     <script src="amaEnemyMonsters.js"></script>
     <script src="amaBattle.js"></script>
     <script src="amaPause.js"></script>
+    <script src="amaName.js"></script>
     <script src="amaMain.js"></script>
 </body>
 </html>
