--- a/ArtisanMonstersManual.html
+++ b/ArtisanMonstersManual.html
@@ -91,6 +91,8 @@
         </table>
         You will have an opportunity to issue command at the start of battle, and only after each of YOUR turns.<br>
         This means if you have a monster with Higher Speed than you, they will perform an issued command only on the first turn after you issue it, afterwhich they act on their innate tactics.<br>
+        <br>
+        Note: if a Monster has a higher speed stat than the arbitrary timeline value, then the arbitrary timeline value is increased by a factor of 10 until it is greater.<br>
         
 
     </p>
