--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -35,7 +35,6 @@
     </h2>
     <br>
     <h3>Artisan Monsters: Alpha</h3>
-    <h4>Monster Battler Game</h4>
     <table id="PrimaryTable" style="width: 500px; min-height: 500px; margin-left: auto; margin-right: auto;"> <!-- aspect-ratio: 1/1; -->
         <tr style="height: 100%;">
             <td id="MapCanvas" style="white-space: pre; width: auto;">
@@ -124,7 +123,8 @@
         4. Let the Player select starting Monster.<br>
         5. Develop a Better Dungeon Generation System, and design pre-generated maps.<br>
         6. Design systems to befriend/capture/breed monsters.<br>
-        7. Expand cast of Monsters.<br>
+        7. Add training systems (Battles =/= Training), and expand the Age system<br>
+        8. Expand cast of Monsters.<br>
     </p>
     <script src="amaDialog.js"></script>
     <script src="amaSpells.js"></script>
