--- a/ArtisanMonstersAlpha.html
+++ b/ArtisanMonstersAlpha.html
@@ -137,6 +137,7 @@
     <script src="amaBattle.js"></script>
     <script src="amaPause.js"></script>
     <script src="amaName.js"></script>
+    <script src="amaItems.js"></script>
     <script src="amaMain.js"></script>
 </body>
 </html>
