--- a/index.html
+++ b/index.html
@@ -28,31 +28,33 @@
       <h3>2024 Roadmap:</h3>
       <img src="/Roadmap-2024.png" width="70%"></img><br>
 
-      <b>May:</b>
+      <b>September Update:</b>
       <div style="text-align: center;">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
-          The <span style="color:green">VidSomewhere</span> announcement was postponed, in order to better align with our schedules. Luckily, this rescheduling has given me more time to improve upon the Prize Crown.<br>
+          It's been a while since I've updated the website.. SORRY!<br>
           <p>
-          I was not as productive as I had planned, waylaid by sickness and recovery. I did not get the script for <span style="color: blue">Sword Wizard: Act 1</span> written yet.<br>
+            The Vidsomewhere was a Huge Success! We had some new and returning participants, and where almost overwhelmed with the quantity of submissions this year!.<br>
+            <iframe width="500" height="300" src="https://www.youtube.com/embed/HUIvC36vVbA?si=jE5mtdUyRYl7FUuk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
+            I'm looking forward to what we can do next year!
+          </p>
+          <p>
+            As for the Sword Wizard Project, this is placed onto indefinite hold.<br>
+            I had written and rewritten some rouch drafts, but none felt good enough. I've taken some time to reflect and Overall, I feel like I need to develope my narrative skills on smaller projects first.
+          </p>
+          <p>
+            Artisan Monsters is still under development, but I am extending the deadline to Q4 of 2025.<br>
+            I could rush through and spaghettie my way through development to get ver 1 done by the end of the year.<br>
+            Instead, I'm electing slow down development to allow me to better balance the stress of programming against my other life obligations.
+          </p>
+          <p>
+            Finally, I have a Wizard Avatar that I'm developing for VRChat.<br>
+            Using OBS and the VRCs built in recording features, I can digitize myself into various environments. I'm hopful that I can start making short films soon!
           </p>
         </div>
       </div>
     
-      <b>June:</b>
-      <div style="text-align: center;">
-        <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
-          My primary focus this month is the <span style="color: blue">Sword Wizard: Act 1</span> script, and subequently all comic page blocking.<br>
-          <p>
-          As for the <span style="color:green">VidSomewhere</span>, we're planning to have an announcment ready by the end of this month.<br>
-          </p>
-          <p>
-          I have a considerable amount of work to do this month in order to catch up, wish me time to work, and disipline to spend that time working.<br>
-          </p>
-        </div>
-      </div>
-
       <br>
-      <h3>News:</h3>
+      <h3>Background:</h3>
       <div style="text-align: center;">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
           <p>
@@ -62,15 +64,10 @@
           </p>
           <p>  
             Finding myself now on an Engineering Path, I had to learn a lot of new skills, develop better habits around time management, and learn how to self motivate just to name a few.
-            Recently I've started to feel more confident in myself at work, and my home life has started to balance back out. So I made the new years resolution to Write, Draw, and Publish a comic book!<br>
+            Recently I've started to feel more confident in myself at work, and my home life has started to balance back out.<br>
           </p>
           <p>
-            After planning out the Sword Wizard Comic Project and starting work on the Artisan Monsters Game Project, I felt a lot more productive and spent a lot less time 'brainstorming'. 
-            The skills I learned (And continue to learn) in Manufacturing apply surprisingly well to the Creative Process!<br>
-            <br>
-          </p>
-          <p>
-            In short, the past 2 years has been an exciting journey of discovery and growth. I have a lot left to learn from my workplace, and I'm excited to see how I can bring those lessons back to my creative pursuits.<br>
+            My growth as a creative internet person is still on going, and I hope you can enjoy the journey! (Or at least the content along the way.)
           </p>
           <p style="text-indent: 4%;">
             Thank You!<br>
