--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
           It's been a while since I've updated the website.. SORRY!<br>
           <p>
-            The Vidsomewhere was a Huge Success! We had some new and returning participants, and where almost overwhelmed with the quantity of submissions this year!.<br>
+            The Vidsomewhere was a Huge Success! We had some new and returning participants, and we were almost overwhelmed with the quantity of submissions this year!.<br>
             <iframe style="display: block; margin: auto;" width="500" height="300" src="https://www.youtube.com/embed/HUIvC36vVbA?si=jE5mtdUyRYl7FUuk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
             I'm looking forward to what we can do next year!
           </p>
