--- a/index.html
+++ b/index.html
@@ -33,16 +33,16 @@
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
           It's been a while since I've updated the website.. SORRY!<br>
           <p>
-            The Vidsomewhere was a Huge Success! We had some new and returning participants, and we were almost overwhelmed with the quantity of submissions this year!.<br>
+            The <b>Vidsomewhere</b> was a Huge Success! We had some new and returning participants, and we were almost overwhelmed with the quantity of submissions this year!.<br>
             <iframe style="display: block; margin: auto;" width="500" height="300" src="https://www.youtube.com/embed/HUIvC36vVbA?si=jE5mtdUyRYl7FUuk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
             I'm looking forward to what we can do next year!
           </p>
           <p>
-            As for the Sword Wizard Project, this is placed onto indefinite hold.<br>
+            As for the <b>Sword Wizard</b> Project, this is placed onto indefinite hold.<br>
             I had written and rewritten some rouch drafts, but none felt good enough. I've taken some time to reflect and Overall, I feel like I need to develope my narrative skills on smaller projects first.
           </p>
           <p>
-            Artisan Monsters is still under development, but I am extending the deadline to Q4 of 2025.<br>
+            <b>Artisan Monsters</b> is still under development, but I am extending the deadline to Q4 of 2025.<br>
             I could rush through and spaghettie my way through development to get ver 1 done by the end of the year.<br>
             Instead, I'm electing slow down development to allow me to better balance the stress of programming against my other life obligations.
           </p>
