--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             Instead, I'm electing slow down development to allow me to better balance the stress of programming against my other life obligations.
           </p>
           <p>
-            Finally, I have a Wizard Avatar that I'm developing for VRChat.<br>
+            Finally, I have a <b>Wizard Avatar</b> that I'm developing for VRChat.<br>
             Using OBS and the VRCs built in recording features, I can digitize myself into various environments. I'm hopful that I can start making short films soon!
           </p>
         </div>
