--- a/interactive-media.html
+++ b/interactive-media.html
@@ -24,7 +24,7 @@
             </th>
             <tr style="border: 1px solid black;">
                 <td style="border: 1px solid black; text-align: center; width: 3px;">
-                    <img src="/Example.png" width="200px">
+                    <img src="/Wiz Day 127.jfif" width="200px">
                     Art TBD
                 </td>
                 <td style="border: 1px solid black; vertical-align: top;">
