--- a/interactive-media.html
+++ b/interactive-media.html
@@ -20,7 +20,7 @@
     <div style="text-align: center;">
         <table style="border: 1px solid black; margin-left: auto; margin-right: auto; max-width: 900px; text-align: left;">
             <th style="border: 1px solid black;" width="700px" colspan="2">
-                <b>Artisan Monsters:</b>
+                <b>Artisan Monsters: (Early Access)</b>
             </th>
             <tr style="border: 1px solid black;">
                 <td style="border: 1px solid black; text-align: center; width: 3px;">
@@ -44,7 +44,7 @@
     <div style="text-align: center;">
         <table style="border: 1px solid black; margin-left: auto; margin-right: auto; max-width: 900px; text-align: left;">
             <th style="border: 1px solid black;" width="700px" colspan="2">
-                <b>Collecting Ball:</b>
+                <b>Collecting Ball: (Final Release)</b>
             </th>
             <tr style="border: 1px solid black;">
                 <td style="border: 1px solid black; text-align: center; width: 3px;">
@@ -68,14 +68,13 @@
     <div style="text-align: center;">
         <table style="border: 1px solid black; margin-left: auto; margin-right: auto; max-width: 900px; text-align: left;">
             <th style="border: 1px solid black;" width="700px" colspan="2">
-                <b>Big Eggventure:</b>
+                <b>Big Eggventure: (Incomplete, On Hiatus)</b>
             </th>
             <tr style="border: 1px solid black;">
                 <td style="border: 1px solid black; text-align: center; width: 3px;">
                     <img src="/BigEggventure.png" width="200px">
                 </td>
                 <td style="border: 1px solid black; vertical-align: top;">
-                    Work in Progress, On Hiatus<br>
                     Spirituall Successor of Collecting Ball<br>
                     <br>
                     Play as an Enchanted Egg tasked with gathering Elemental Shards across the 5 Elemental Planes of Existance!<br>
@@ -95,7 +94,7 @@
     <div style="text-align: center;">
         <table style="border: 1px solid black; margin-left: auto; margin-right: auto; max-width: 900px; text-align: left;">
             <th style="border: 1px solid black;" width="700px" colspan="2">
-                <b>Space Egg Survivor:</b>
+                <b>Space Egg Survivor: (Prototype, On Hiatus)</b>
             </th>
             <tr style="border: 1px solid black;">
                 <td style="border: 1px solid black; text-align: center; width: 3px;">
