--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           </p>
           <p>
             As for the <b>Sword Wizard</b> Project, this is placed onto indefinite hold.<br>
-            I had written and rewritten some rouch drafts, but none felt good enough. I've taken some time to reflect and Overall, I feel like I need to develope my narrative skills on smaller projects first.
+            I had written and rewritten some rough drafts, but none felt good enough. I've taken some time to reflect and Overall, I feel like I need to develope my narrative skills on smaller projects first.
           </p>
           <p>
             <b>Artisan Monsters</b> is still under development, but I am extending the deadline to Q4 of 2025.<br>
