--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <p>
             <b>Artisan Monsters</b> is still under development, but I am extending the deadline to Q4 of 2025.<br>
             I could rush through and spaghettie my way through development to get ver 1 done by the end of the year.<br>
-            Instead, I'm electing slow down development to allow me to better balance the stress of programming against my other life obligations.
+            Instead, I'm electing to slow down development to allow me to better balance the stress of programming against my other life obligations.
           </p>
           <p>
             Finally, I have a <b>Wizard Avatar</b> that I'm developing for VRChat.<br>
