--- a/index.html
+++ b/index.html
@@ -25,30 +25,31 @@
     </h2>
 
     <p style="align-items: center;">
-      <h3>2024 Roadmap:</h3>
-      <img src="/Roadmap-2024.png" width="70%"></img><br>
+      <h3>2025 Roadmap:</h3>
+      <img src="/Roadmap-2025.png" width="70%"></img><br>
 
-      <b>September Update:</b>
+      <b>January Update:</b>
       <div style="text-align: center;">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
-          It's been a while since I've updated the website.. SORRY!<br>
+          NEW YEAR, SAME ME!<br>
           <p>
-            The <b>Vidsomewhere</b> was a Huge Success! We had some new and returning participants, and we were almost overwhelmed with the quantity of submissions this year!.<br>
-            <iframe style="display: block; margin: auto;" width="500" height="300" src="https://www.youtube.com/embed/HUIvC36vVbA?si=jE5mtdUyRYl7FUuk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe><br>
-            I'm looking forward to what we can do next year!
+            This has been a particularly hectic year..
+            But it’s also been a particularly productive year.
+            I learned a lot, and I’ll be taking those lessons into the projects I plan for this year!
           </p>
           <p>
-            As for the <b>Sword Wizard</b> Project, this is placed onto indefinite hold.<br>
-            I had written and rewritten some rough drafts, but none felt good enough. I've taken some time to reflect and Overall, I feel like I need to develope my narrative skills on smaller projects first.
+            First of all, I’ll be resuming my <b>Daily Wizards</b> later this month. (I thought I had 1 more week left in December..)
+            Last year, I got to 190 Consecutive Daily Wizards. The main issue that tripped me up was not giving the task enough reverence. On multiple occasions, I’d be awake late into the night, putting off the task to the last possible moment.
+            I’ll be shifting my schedule slightly to make time in the morning, so I can start my day with a Daily Wizard!
           </p>
           <p>
-            <b>Artisan Monsters</b> is still under development, but I am extending the deadline to Q4 of 2025.<br>
-            I could rush through and spaghettie my way through development to get ver 1 done by the end of the year.<br>
-            Instead, I'm electing to slow down development to allow me to better balance the stress of programming against my other life obligations.
+            As for <b>Artisan Monsters: Alpha</b>, Development on that had gone on Hiatus in July, and I hadn’t found the time to resume development. Ultimately, I felt overwhelmed with the project, and I stopped keeping up with my task list.
+            I’m going to spend some time this month developing a better, more concrete plan, and a tighter scope. I plan to also update the Manual Page to make it better outline the game, what’s done, what I’m working on, and what’s next.
           </p>
           <p>
-            Finally, I have a <b>Wizard Avatar</b> that I'm developing for VRChat.<br>
-            Using OBS and the VRCs built in recording features, I can digitize myself into various environments. I'm hopful that I can start making short films soon!
+            The last thing I want to touch on is...
+            I’m challenging myself to write, film, and release a short film every Quarter.
+            The core of this challenge is to keep on a schedule and hit deadlines, not quality. I fully expect this year's films to be awful, but show clear signs of growth.
           </p>
         </div>
       </div>
