--- a/index.html
+++ b/index.html
@@ -33,39 +33,25 @@
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
           NEW YEAR, SAME ME!<br>
           <p>
-            This has been a particularly hectic year..
-          </p>
-          <p>
-            But it’s also been a particularly productive year.
-          </p>
-          <p>
+            This has been a particularly hectic year..<br>
+            But it’s also been a particularly productive year.<br>
             I learned a lot, and I’ll be taking those lessons into the projects I plan for this year!
           </p>
           <br>
           <p>
-            First of all, I’ll be resuming my <b>Daily Wizards</b> later this month. (I thought I had 1 more week left in December..)
-          </p>
-          <p>
-            Last year, I got to 190 Consecutive Daily Wizards. The main issue that tripped me up was not giving the task enough reverence. On multiple occasions, I’d be awake late into the night, putting off the task to the last possible moment.
-          </p>
-          <p>
+            First of all, I’ll be resuming my <b>Daily Wizards</b> later this month. (I thought I had 1 more week left in December..)<br>
+            Last year, I got to 190 Consecutive Daily Wizards. The main issue that tripped me up was not giving the task enough reverence. On multiple occasions, I’d be awake late into the night, putting off the task to the last possible moment.<br>
             I’ll be shifting my schedule slightly to make time in the morning, so I can start my day with a Daily Wizard!
           </p>
           <br>
           <p>
-            As for <b>Artisan Monsters: Alpha</b>, Development on that had gone on Hiatus in July, and I hadn’t found the time to resume development. Ultimately, I felt overwhelmed with the project, and I stopped keeping up with my task list.
-          </p>
-          <p>
+            As for <b>Artisan Monsters: Alpha</b>, Development on that had gone on Hiatus in July, and I hadn’t found the time to resume development. Ultimately, I felt overwhelmed with the project, and I stopped keeping up with my task list.<br>
             I’m going to spend some time this month developing a better, more concrete plan, and a tighter scope. I plan to also update the Manual Page to make it better outline the game, what’s done, what I’m working on, and what’s next.
           </p>
           <br>
           <p>
-            The last thing I want to touch on is...
-          </p>
-          <p>
-            I’m challenging myself to write, film, and release a short film every Quarter.
-          </p>
-          <p>
+            The last thing I want to touch on is...<br>
+            I’m challenging myself to write, film, and release a short film every Quarter.<br>
             The core of this challenge is to keep on a schedule and hit deadlines, not quality. I fully expect this year's films to be awful, but show clear signs of growth.
           </p>
         </div>
