--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       <div style="text-align: center;">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
           <p>
-            Almost 2 Years ago I quit my job to focus on my creative career. I learned quickly that I was not adequately equipped to manage a business.
-            A few months later I ended up finding another job as an Assembler, I learned a lot about Manufacturing and Dignity of Work.<br>
-            Being the highly motivated person that I am, I quickly rose through the Assembler Career Ladder, and applied for a position to work with robots as a Technician.<br>
+            In 2021 I quit my job to focus on my creative career. I learned quickly that I was not adequately equipped to manage a business.
+            A few months later I ended up finding another job as an Assembler in a local Factory, I learned a lot about Manufacturing and Dignity of Work.<br>
+            Being the highly motivated person that I am, I quickly rose through the Career Ladder, and applied for a position to work with automation robots as a Technician.<br>
           </p>
           <p>  
             Finding myself now on an Engineering Path, I had to learn a lot of new skills, develop better habits around time management, and learn how to self motivate just to name a few.
