--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
     <p style="align-items: center;">
       <h3>2025 Roadmap:</h3>
       <img src="/Roadmap-2025.png" width="70%"></img><br>
-      <br>
-      <b>January Update:</b>
+      
+      <h3>January Update:</h3>
       <div style="text-align: center;">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
           NEW YEAR, SAME ME!<br>
