Testing Update ArtisanMonstersManual.html

--- a/ArtisanMonstersManual.html
+++ b/ArtisanMonstersManual.html
@@ -29,6 +29,7 @@
     <br>
     <h3>Artisan Monsters: Alpha</h3>
     <a href="/ArtisanMonstersAlpha.html">Return to Game</a>
+    <a href="javascript:history.back()">Go Back</a>
     <h4>User Manual</h4>
     <p>
         This is a work in progress, these sections are to help illucidate systems and concepts that don't have proper in game explination.<br>
