--- a/ArtisanMonstersManual.html
+++ b/ArtisanMonstersManual.html
@@ -18,6 +18,7 @@
         }
         p {
             text-align: left;
+            text-indent: 25px;
         }
 
         /* Style the button that is used to open and close the collapsible content */
