--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <p style="align-items: center;">
       <h3>2025 Roadmap:</h3>
       <img src="/Roadmap-2025.png" width="70%"></img><br>
-      
-      <h3>January Update:</h3>
-      <div style="text-align: center;">
+
+      <div type="button" class="collapsible"><h3>January Update:</h3></div>
+      <div class="content" style="text-align: center;">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
           NEW YEAR, SAME ME!<br>
           <p>
