--- a/index.html
+++ b/index.html
@@ -28,7 +28,8 @@
       <h3>2025 Roadmap:</h3>
       <img src="/Roadmap-2025.png" width="70%"></img><br>
 
-      <div type="button" class="collapsible"><h3>January Update:</h3></div>
+      <h3>January Update:</h3>
+      <div type="button" class="collapsible" style="text-align: center">Expand...</div>
       <div class="content" style="text-align: center;">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
           NEW YEAR, SAME ME!<br>
@@ -85,5 +86,5 @@
     </div>
     
   </body>
-
+  <script src="collapsible.js"></script>
 </html>
