--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
       <h3>2025 Roadmap:</h3>
       <img src="/Roadmap-2025.png" width="70%"></img><br>
 
-      <h3>January Update:</h3>
-      <div type="button" class="collapsible" style="text-align: center">Expand...</div>
+      <h3 type="button" class="collapsible">January Update:</h3>
+      <div type="button" class="collapsible" style="align: center">Expand...</div>
       <div class="content" style="text-align: center;">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
           NEW YEAR, SAME ME!<br>
