--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       <h3>2025 Roadmap:</h3>
       <img src="/Roadmap-2025.png" width="70%"></img><br>
 
-      <h3>January Update:</h3>
-      <div type="button" class="collapsible" style="align: center">Expand...</div>
-      <div class="content" style="position: absolute; left: 50; transform: -50;">
+      <h3>January Update.:</h3>
+      <div type="button" class="collapsible" style="position: absolute; left: 50%; transform: translateX(-50%);">Expand...</div>
+      <div class="content">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
           NEW YEAR, SAME ME!<br>
           <p>
