--- a/index.html
+++ b/index.html
@@ -24,11 +24,12 @@
       -->
     </h2>
 
-    <p style="align-items: center;">
+    <div style="align-items: center;">
       <h3>2025 Roadmap:</h3>
       <img src="/Roadmap-2025.png" width="70%"></img><br>
 
-      <h3>January Update.:</h3>
+      <h3>January Update:</h3>
+      <div 
       <div type="button" class="collapsible" style="position: absolute; left: 50%; transform: translateX(-50%);">Expand...</div>
       <div class="content">
         <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
@@ -76,7 +77,7 @@
           </p>
         </div>
       </div>
-    </p>
+    </div>
 
     <div id="divCanvas">
       <h3>Non-Categorized:</h3>
