--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             The core of this challenge is to keep on a schedule and hit deadlines, not quality. I fully expect this year's films to be awful, but show clear signs of growth.
           </p>
         </div>
+        <div type="button" class="collapsible" style="margin: auto; width: 75%">Collapse</div>
       </div>
     
       <br>
