--- a/index.html
+++ b/index.html
@@ -47,23 +47,26 @@
             <b>Daily Wizards:</b> are cancelled for now. While I do plan on drawing Wizards as much as I can, I know I won't be able to deliver on the "Daily" Aspect.<br>
             I want to give a special Shout out to Angus! the only person on our server to successfully attain the status of Wizard by drawing and Posting a Wizard Every Day for a Year!<br>
             Further, I'm working on a side project to comemorate this, as well as setting up a section on this website to collect all of my Wizards into a single location.<br>
+          </p>
+          <p>
             <b>Quartly Films:</b> I already knew this goal was over ambitious. The main issue I have is finding the time between everything else to get recordings and do the editing.<br>
             I've had do issue with ideas and writing though, so I have a lot of ideas I'm looking forward to releasing.<br>
+          </p>
+          <p>
             <b>Artisan Monsters:</b> has once again gone on Hiatus. As some of you may know, my day job involves a lot of technical programming and engineering which drains a lot of the type of energy I need to work on games.<br>
             Simply put, I will continue to struggle to work on game dev for as long as I have this job. Moving forward, I'll not be putting game dev on my Road Maps, but rest assured that I will continue to do game dev. Just at a much slower pace.<br>
           </p>
           <p>
-            <b>Sumo, BabsCon, and VidSomewhere:</b> These 3 Projects are the top priority projects for this year.<br>
-            Sumo was a big success! I was able to drive 16 hours to the tournament, got a lot of practice matches in, learned a ton, and lost all of my matches!<br>
+            <b>Sumo:</b> Sumo was a big success! I was able to drive 16 hours to the tournament, got a lot of practice matches in, learned a ton, and lost all of my matches!<br>
           </p>
           <p>
-            BabsCon was also a big success! I got to spend time with my best friend and some old friends too!<br>
+            <b>BabsCon:</b> was also a big success! I got to spend time with my best friend and some old friends too!<br>
             We had developed an MLP Version of A Song of Ice and Fire, I had bought and assembled all the piece in the days leading up to the Con and on the first day too!<br>
             There was even a Happy Wedding!<br>
           </p>
           <p>
-            As for the VidSomewhere,<br>
-            We're about to record the announcement video, so keep an eye out for that in the next few days!
+            <b>VidSomewhere:</b> Hasn't happened yet!<br>
+            In fact, at the time of writing this, we're about to record the announcement video, so keep an eye out for that in the next few days!
           </p>
         </div>
         <div type="button" class="collapsibleUP" style="margin: auto; width: 25%">Collapse</div>
