--- a/index.html
+++ b/index.html
@@ -77,10 +77,16 @@
           <p>
             <b>DawnSomewhere Events:</b> I expect that these will continue as normal this year. Aside from BabsCon which no longer exists.<br>
             The More demanding events are later in the year when I'll have found a better routine with my family, so I don't anticipate a conflict.<br>
-            <p>
+            <p style="width: 75%">
               <b>Artisan's Monthly Open Table:</b> On the last Saturday of Each Month, I run an Open Table on the Discord Server to introduce new people to Role Playing as opposed to Roll Playing.<br>
+            </p>
+            <p style="width: 75%">
               <b>VidSomewhere:</b> Once a Year we host an online Film Festival where Effort is more important that Quality.<br>
+            </p>
+            <p style="width: 75%">
               <b>Weekly OSRS Clan Events:</b> Every Saturdy at 3pm PST, I host events in OSRS for my clan "Ransomewhere".<br>
+            </p>
+            <p style="width: 75%">
               <b>Also:</b> We have a couple other amazing community members that run other events on our server!<br>
             </p>
           </p>
@@ -122,4 +128,5 @@
   </body>
   <script src="collapsible.js"></script>
 </html>
+
 
