--- a/performative-media.html
+++ b/performative-media.html
@@ -18,13 +18,14 @@
 
     <h3>Discord</h3>
     I don't have a discord server of my own, but I do owe a lot of my creative drive to DawnSomewhere.<br>
-    Feel free to join the <a href="https://discord.gg/4qw5qYBrYy" target="_blank">DawnSomewhere Discord</a>.<br>
-    Though many of the original creative types have moved on, I still feel like there's potential in this community.<br>    
+    Feel free to join the <a href="https://discord.gg/4qw5qYBrYy" target="_blank">DawnSomewhere Discord</a>, as this is the best place to find me.<br>    
     <h3>Twitch</h3>
-    This section is a Placeholder for when I'm ready to start streaming.<br>
+    I'm the #10 Top Speedrunner of Spyro JP, and I play a variety of PS1/PS2 era games.<br>
+    <a href="https://www.twitch.tv/artisanbubblegum" target="_blank">Artisan on Twitch</a>.<br>
     <h3>Other</h3>
     I feel like there should be a third section on this page, as the other pages have Three Sections,<br>
     This section is to make the site feel more balanced.<br>
   </body>
 
 </html>
+
