--- a/interactive-media.html
+++ b/interactive-media.html
@@ -94,7 +94,7 @@
     <div style="text-align: center;">
         <table style="border: 1px solid black; margin-left: auto; margin-right: auto; max-width: 900px; text-align: left;">
             <th style="border: 1px solid black;" width="700px" colspan="2">
-                <b>Space Egg Survivor: (Prototype, On Hiatus)</b>
+                <b>Space Egg Survivor: (Prototype)</b>
             </th>
             <tr style="border: 1px solid black;">
                 <td style="border: 1px solid black; text-align: center; width: 3px;">
@@ -163,3 +163,4 @@
   </body>
 
 </html>
+
