--- a/interactive-media.html
+++ b/interactive-media.html
@@ -44,7 +44,7 @@
     <div style="text-align: center;">
         <table style="border: 1px solid black; margin-left: auto; margin-right: auto; max-width: 900px; text-align: left;">
             <th style="border: 1px solid black;" width="700px" colspan="2">
-                <b>Collecting Ball: (Final Release)</b>
+                <b>Collecting Ball: (Released 2019)</b>
             </th>
             <tr style="border: 1px solid black;">
                 <td style="border: 1px solid black; text-align: center; width: 3px;">
@@ -163,4 +163,5 @@
   </body>
 
 </html>
+
 
