--- a/interactive-media.html
+++ b/interactive-media.html
@@ -20,7 +20,7 @@
     <div style="text-align: center;">
         <table style="border: 1px solid black; margin-left: auto; margin-right: auto; max-width: 900px; text-align: left;">
             <th style="border: 1px solid black;" width="700px" colspan="2">
-                <b>Artisan Monsters: (Early Access)</b>
+                <b>Artisan Monsters: (Early Access, In Development)</b>
             </th>
             <tr style="border: 1px solid black;">
                 <td style="border: 1px solid black; text-align: center; width: 3px;">
@@ -68,7 +68,7 @@
     <div style="text-align: center;">
         <table style="border: 1px solid black; margin-left: auto; margin-right: auto; max-width: 900px; text-align: left;">
             <th style="border: 1px solid black;" width="700px" colspan="2">
-                <b>Big Eggventure: (Incomplete, On Hiatus)</b>
+                <b>Big Eggventure: (Incomplete, On Hiatus 2022)</b>
             </th>
             <tr style="border: 1px solid black;">
                 <td style="border: 1px solid black; text-align: center; width: 3px;">
@@ -94,7 +94,7 @@
     <div style="text-align: center;">
         <table style="border: 1px solid black; margin-left: auto; margin-right: auto; max-width: 900px; text-align: left;">
             <th style="border: 1px solid black;" width="700px" colspan="2">
-                <b>Space Egg Survivor: (Prototype)</b>
+                <b>Space Egg Survivor: (Prototype 2024)</b>
             </th>
             <tr style="border: 1px solid black;">
                 <td style="border: 1px solid black; text-align: center; width: 3px;">
@@ -163,5 +163,6 @@
   </body>
 
 </html>
+
 
 
