Adding 2026 Roadmap to site

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     </h2>
 
     <div style="align-items: center;">
+      <h3>2026 Roadmap:</h3>
+      <img src="/Roadmap-2026.png" width="70%"></img><br>
+
       <h3>New Year Update:</h3>
       <div type="button" class="collapsible" style="margin: auto; width: 25%">Expand...</div>  
       <div class="content">
@@ -128,6 +131,7 @@
   </body>
   <script src="collapsible.js"></script>
 </html>
+
 
 
 
