--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 
     <div style="align-items: center;">
       <h3>2026 Roadmap:</h3>
+      <div style="margin-left: 8%">\/</div>
       <img src="/Roadmap-2026.png" width="70%"></img><br>
-
+      <div style="margin-left: 8%">/\</div>
+      
       <h3>New Year Update:</h3>
       <div type="button" class="collapsible" style="margin: auto; width: 25%">Expand...</div>  
       <div class="content">
@@ -131,6 +133,7 @@
   </body>
   <script src="collapsible.js"></script>
 </html>
+
 
 
 
