Adding February Update
The Update posted in February about how January went and what this months plans are.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,51 @@
     <div style="align-items: center;">
       <h3>2026 Roadmap:</h3>
       <img src="/Roadmap-2026.png" width="70%"></img><br>
+
+      <h3>February Update:</h3>
+      <div type="button" class="collapsible" style="margin: auto; width: 25%">Expand...</div>  
+      <div class="content">
+        <br>
+        <div style="display: inline-block; text-align: left; text-indent: 2%; max-width: 700px;">
+          Hello!<br>
+          <p>
+            January was a Chaotic Month!<br>
+          </p>
+          <p>
+            We got home and started to get settled into a routine, except the Wife and I settled into different routines..<br>
+            Eventually, we worked out a schedule to help bring our routines (<i>And Expectations</i>) into alignment.<br>
+            The each of us get take an 8 Hour Shift to let the other sleep, as well a 3 hour shift to gie eachother a break to maintain our sanity.<br>
+          </p>
+          <p>
+            In Opposition of our sanity, we learned about Life Flight, the hard way, with a <b>$62,000.00 bill</b>..<br>
+            Worse yet, we're expecting a similarly large bill from the NICU and Neurologist that looked at my Baby.<br>
+            Originally, the plan was to keep my creative projects to a minimum and focus on time with Baby, but financial pressures are pushing us to reorganize once again.<br>
+            The wife is going back to work early and trying to get to 40 hours. (She's self employed, so no paid leave for her)<br>
+            I'm presently on paid leave, so I won't be able to earn any more by going back to work. Instead, I'm opening Commissions and Resuming Streaming when I can, to raise funds to help us avoid Bankruptcy and losing the House...<br>
+          </p>
+          <p>
+            That Brings us to the February Plans:
+            <p style="width: 80%; margin: auto">
+              <b>+ Streaming:</b> I should be able to stream between 3pm - 6pm PST most weekdays. (But if my Family needs extra Support, I have to prioratize time with them.)<br>
+            </p>
+            <p style="width: 80%; margin: auto">
+              <b>+ Commissions:</b> I draw Wizards starting at $15, and Non-Wizards starting at $20. And as part of my Fundraiser, I'll be willing to mail the original drawing for free.<br>
+              To get a Slot, join our <a href="https://discord.gg/4qw5qYBrYy" target="_blank">Discord Server</a> and ping me @Artisan.<br>
+            </p>
+            <p style="width: 80%; margin: auto">
+              <b>+ Artisan Monsters:</b> I have the Design Doc almost ready to publish, I'll add a link to it here and on the <a href="/ArtisanMonstersAlpha.html">AMA Game Page</a> later tonight. (11th February)<br>
+            </p>
+            <p style="width: 80%; margin: auto">
+              <b>+ Daily Wizards:</b> I've gotten into a solid routine with Baby, and will start posting Daily Wizards Here, on <a href="https://x.com/ArtisanBG" target="_blank">X</a>, and on <a href="https://discord.gg/4qw5qYBrYy" target="_blank">Discord</a> starting tomorrow night. (12th February)<br>
+            </p>
+            <p style="width: 80%; margin: auto">
+              <b>+ Daily Comics:</b> Postponed/Cancelled. Presently, I don't think I'll have the Capacity to keep up with a Daily Comic in addition to everything else.<br>
+            </p>
+          </p>
+        </div>
+        <div type="button" class="collapsibleUP" style="margin: auto; width: 25%">Collapse</div>
+      </div>
+      
       
       <h3>New Year Update:</h3>
       <div type="button" class="collapsible" style="margin: auto; width: 25%">Expand...</div>  
@@ -131,6 +176,7 @@
   </body>
   <script src="collapsible.js"></script>
 </html>
+
 
 
 
