Updating Link to Twitch

--- a/performative-media.html
+++ b/performative-media.html
@@ -21,11 +21,12 @@
     Feel free to join the <a href="https://discord.gg/4qw5qYBrYy" target="_blank">DawnSomewhere Discord</a>, as this is the best place to find me.<br>    
     <h3>Twitch</h3>
     I'm the #10 Top Speedrunner of Spyro JP, and I play a variety of PS1/PS2 era games.<br>
-    <a href="https://www.twitch.tv/artisanbubblegum" target="_blank">Artisan on Twitch</a>.<br>
+    <a href="https://www.twitch.tv/worldfamousartisan" target="_blank">Artisan on Twitch</a>.<br>
     <h3>Other</h3>
     I feel like there should be a third section on this page, as the other pages have Three Sections,<br>
     This section is to make the site feel more balanced.<br>
   </body>
 
 </html>
+
 
